--- a/css/style.css
+++ b/css/style.css
@@ -30152,7 +30152,7 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
 	font-size: 16px;
 	font-weight: 700;
 	line-height: 24px;
-	text-transform: capitalize;
+	/* text-transform: capitalize; */
 }
 
 .rd-navbar {
